[gd_scene load_steps=8 format=2]

[ext_resource path="res://speed_controller/speed_controller_panel.gd" type="Script" id=1]
[ext_resource path="res://speed_controller/speed_controller.tscn" type="PackedScene" id=2]
[ext_resource path="res://button/button.tscn" type="PackedScene" id=3]
[ext_resource path="res://label/label.tscn" type="PackedScene" id=4]

[sub_resource type="CubeMesh" id=1]

custom_aabb = AABB( 0, 0, 0, 0, 0, 0 )
size = Vector3( 2, 2, 2 )
subdivide_width = 0
subdivide_height = 0
subdivide_depth = 0

[sub_resource type="PlaneMesh" id=2]

custom_aabb = AABB( 0, 0, 0, 0, 0, 0 )
size = Vector2( 2, 2 )
subdivide_width = 0
subdivide_depth = 0

[sub_resource type="SpatialMaterial" id=3]

render_priority = 0
flags_transparent = false
flags_unshaded = false
flags_vertex_lighting = false
flags_no_depth_test = false
flags_use_point_size = false
flags_world_triplanar = false
flags_fixed_size = false
flags_albedo_tex_force_srgb = false
vertex_color_use_as_albedo = false
vertex_color_is_srgb = false
params_diffuse_mode = 0
params_specular_mode = 0
params_blend_mode = 0
params_cull_mode = 0
params_depth_draw_mode = 0
params_line_width = 1.0
params_point_size = 1.0
params_billboard_mode = 0
params_grow = false
params_use_alpha_scissor = false
albedo_color = Color( 1, 1, 1, 1 )
metallic = 0.0
metallic_specular = 0.5
metallic_texture_channel = 0
roughness = 0.0
roughness_texture_channel = 0
emission_enabled = true
emission = Color( 0.807843, 0.815686, 1, 1 )
emission_energy = 1.0
emission_operator = 0
emission_on_uv2 = false
normal_enabled = false
rim_enabled = false
clearcoat_enabled = false
anisotropy_enabled = false
ao_enabled = false
depth_enabled = false
subsurf_scatter_enabled = false
transmission_enabled = false
refraction_enabled = false
detail_enabled = false
uv1_scale = Vector3( 1, 1, 1 )
uv1_offset = Vector3( 0, 0, 0 )
uv1_triplanar = false
uv1_triplanar_sharpness = 1.0
uv2_scale = Vector3( 1, 1, 1 )
uv2_offset = Vector3( 0, 0, 0 )
uv2_triplanar = false
uv2_triplanar_sharpness = 1.0
proximity_fade_enable = false
distance_fade_enable = false
_sections_unfolded = [ "Emission" ]

[node name="Spatial" type="Spatial"]

script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="." index="0"]

transform = Transform( 1, 0, 0, 0, 0.09025, 0, 0, 0, 0.55, 0, 0, 0 )
layers = 1
material_override = null
cast_shadow = 1
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
mesh = SubResource( 1 )
skeleton = NodePath("..")
material/0 = null

[node name="Scene Root" parent="." index="1" instance=ExtResource( 2 )]

transform = Transform( -4.88762e-08, 0, -0.3, 0, 0.3, 0, 0.3, 0, -4.88762e-08, 0.45, 0.15, 0 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="MeshInstance" type="MeshInstance" parent="Scene Root" index="4"]

transform = Transform( 1.15514, 0, -5.80299e-09, 0, 1, 0, -5.80346e-09, 0, 1.11952, 0, -0.18545, 0 )
layers = 1
material_override = null
cast_shadow = 1
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
mesh = SubResource( 2 )
skeleton = NodePath("..")
material/0 = SubResource( 3 )
_sections_unfolded = [ "material" ]

[node name="Reverse" parent="." index="2" instance=ExtResource( 3 )]

transform = Transform( 0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, -0.65, 0.0902985, -0.3 )
_sections_unfolded = [ "Collision", "Transform" ]
color = Color( 0, 1, 0.152941, 1 )
set_up = true

[node name="Boost" parent="." index="3" instance=ExtResource( 3 )]

transform = Transform( 0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, -0.65, 0.0902985, 0.3 )
_sections_unfolded = [ "Collision", "Transform" ]
type = 1
color = Color( 0, 1, 0.15625, 1 )
blinking_duration = 10
set_up = true

[node name="Reverse_l" parent="." index="4" instance=ExtResource( 4 )]

transform = Transform( -2.44381e-08, 0, -0.15, 0, 0.15, 0, 0.15, 0, -2.44381e-08, -0.85101, 0.0995724, -0.3 )
text_label = "Reverse"

[node name="Boost_l" parent="." index="5" instance=ExtResource( 4 )]

transform = Transform( -2.44381e-08, 0, -0.15, 0, 0.15, 0, 0.15, 0, -2.44381e-08, -0.85101, 0.0995724, 0.3 )
text_label = "Boost"

[connection signal="position_changed" from="Scene Root" to="." method="_on_Scene_Root_position_changed"]

[connection signal="left_click" from="Reverse" to="." method="_on_Reverse_left_click"]

[connection signal="button_blinking_terminated" from="Boost" to="." method="_on_Boost_button_blinking_terminated"]

[connection signal="left_click" from="Boost" to="." method="_on_Boost_left_click"]


